--- a/public/lpp.css
+++ b/public/lpp.css
@@ -14,7 +14,7 @@ a {
 }
 
 body {
-  
+  -webkit-tap-highlight-color: transparent; /* Chrome移动设备上的按钮点击时的蓝色高亮:此代码可以取消        借鉴网址：https://blog.csdn.net/weixin_45406850/article/details/124303385#:~:text=%E6%9C%AC%E6%96%87%E4%BB%8B%E7%BB%8D%E4%BA%86%E5%9C%A8%E7%A7%BB%E5%8A%A8%E7%AB%AF%E5%BC%80%E5%8F%91%E4%B8%AD%E9%81%87%E5%88%B0%E7%9A%84%E5%85%83%E7%B4%A0%E7%82%B9%E5%87%BB%E5%90%8E%E5%87%BA%E7%8E%B0%E8%93%9D%E8%89%B2%EF%BC%88%E6%88%96%E9%BB%84%E8%89%B2%EF%BC%89%E9%AB%98%E4%BA%AE%E6%A1%86%E7%9A%84%E9%97%AE%E9%A2%98%EF%BC%8C%E4%BB%A5%E5%8F%8A%E5%A6%82%E4%BD%95%E9%80%9A%E8%BF%87%E8%AE%BE%E7%BD%AECSS%E6%A0%B7%E5%BC%8F%E6%9D%A5%E8%A7%A3%E5%86%B3%E8%BF%99%E4%B8%80%E9%97%AE%E9%A2%98%E3%80%82,%E5%85%B3%E9%94%AE%E5%9C%A8%E4%BA%8E%E4%BD%BF%E7%94%A8%60-webkit-tap-highlight-color%60%E5%B0%86%E9%AB%98%E4%BA%AE%E9%A2%9C%E8%89%B2%E8%AE%BE%E4%B8%BA%E9%80%8F%E6%98%8E%EF%BC%8C%E5%B9%B6%E7%BB%93%E5%90%88%60outline%3Anone%60%E5%8E%BB%E9%99%A4%E5%85%83%E7%B4%A0%E8%81%9A%E7%84%A6%E6%97%B6%E7%9A%84%E8%BE%B9%E6%A1%86%E3%80%82%20%E6%AD%A4%E5%A4%96%EF%BC%8C%E8%BF%98%E6%8F%90%E4%BE%9B%E4%BA%86%E9%92%88%E5%AF%B9%E4%B8%8D%E5%90%8C%E6%A0%87%E7%AD%BE%E5%A6%82a%E6%A0%87%E7%AD%BE%E3%80%81img%E6%A0%87%E7%AD%BE%E7%9A%84%E9%92%88%E5%AF%B9%E6%80%A7%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%88%EF%BC%8C%E7%A1%AE%E4%BF%9D%E5%90%84%E7%A7%8D%E6%83%85%E5%86%B5%E4%B8%8B%E7%9A%84%E7%82%B9%E5%87%BB%E9%AB%98%E4%BA%AE%E9%83%BD%E8%83%BD%E8%A2%AB%E6%AD%A3%E7%A1%AE%E5%A4%84%E7%90%86%E3%80%82*/
 }
 
 ::-webkit-scrollbar {
