--- a/public/lpp.css
+++ b/public/lpp.css
@@ -6,7 +6,7 @@
 }
 
 li {
-  tlist-style: none;
+  list-style: none;
 }
 
 a {
@@ -23,7 +23,11 @@ body {
 }
 
 
-
+#app {  
+    border: 5px solid red;
+    height: 100vh;
+    overflow: auto;
+}
 
 
 
