--- a/public/lpp.css
+++ b/public/lpp.css
@@ -35,7 +35,7 @@ body {
 @font-face {
     font-family: 'MyFontAcer';
     /* 自定义字体名称 */
-    src: url('./typeface/ctfy.ttf') format('truetype');
+    src: url('/typeface/ctfy.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
     color: blue;
